add text in site

--- a/boosty.html
+++ b/boosty.html
@@ -278,12 +278,12 @@
 		<script>
 		    let currentDate = new Date();
 			let currentYear = currentDate.getFullYear();
-			console.log(currentYear);
+			console.log('developing by Maksim');
 		</script>
 		
 		</p>
         <div class="credits">
-          developing by <a href="#">zyk0</a>
+          developing by <a href="https://zyk0.github.io/contact.html" target="_blank">zyk0</a>
         </div>
       </div>
     </div>
