--- a/classbook.html
+++ b/classbook.html
@@ -56,7 +56,6 @@
   </header>
 
   <main class="main">
-
     <!--  -->
     <div class="page-title light-background">
       <div class="container">
@@ -68,27 +67,33 @@
         </nav>
       </div>
     </div><!--  -->
-
+	    <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
-      <div class="container">	
-	
+    <div class="container">
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>Групповые и индивидуальные занятия</h1>
-		<p>+ Интенсив для начинающий (А1-А-2)</p>
-		<p>+  Занятия по уровням В1, В2, С1</p>
-		<p>- немецкий </p>
+        <h1>3. Учебники, практикумы </h1>
+		<h4> pdf-книги 300 страниц, 500 рублей</h4>
 		<p>- английский</p>
+		<p>- немецкий</p>
 		<p>- французский</p>
+		<p>- испанский</p>
 		<p>- польский</p>
 		<p>- голландский</p>
-		<p>- РКИ (русский как иностранный )(на англ, нем, фр, исп)</p>
+		<p>- РКИ (на англ)</p>
+		<p>- удмуртский</p>
       </div>
-    </div><!-- End Page Title -->	
-	</div>
-	</section>
+	  <div class="content px-4">
+		  <div class="row gx-6">
+			Практикумы содержат 30 авторских уроков, включающих упрощённое объяснение грамматики, тематическую лексику, тексты и упражнения, направленные на отработку коммуникативных навыков. В практикумах объединены принципы и методы, используемые большинством полиглотов: освоение базовых грамматических структур, интенсивный набор наиболее частотной лексики. Достигнутый уровень А2
+		  </div>
+	  </div>			
+	  
+    </div><!-- End Page Title -->
+    </div>
+    </section><!-- /Portfolio Section -->
 
   </main>
 
@@ -158,19 +163,20 @@
 		<script>
 		    let currentDate = new Date();
 			let currentYear = currentDate.getFullYear();
-			console.log(currentYear);
+			console.log('developing by Maksim');
 		</script>
 		
 		</p>
         <div class="credits">
-          developing by <a href="#">zyk0</a>
+          developing by <a href="https://zyk0.github.io/contact.html" target="_blank">zyk0</a>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+  <i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
