--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>socal network:</h4>
-                  <p><a href="#">группа vk</a></p>
+                  <p><a href="https://vk.com/id174345968">группа vk</a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -212,12 +212,12 @@
 		<script>
 		    let currentDate = new Date();
 			let currentYear = currentDate.getFullYear();
-			console.log(currentYear);
+			console.log('developing by Maksim');
 		</script>
 		
 		</p>
         <div class="credits">
-          developing by <a href="#">zyk0</a>
+          developing by <a href="https://zyk0.github.io/contact.html" target="_blank">zyk0</a>
         </div>
       </div>
     </div>
