--- a/lesson.html
+++ b/lesson.html
@@ -64,35 +64,74 @@
         </nav>
       </div>
     </div><!-- End Page Title -->
-
-    <!-- Portfolio Section -->
+	
     <section id="portfolio" class="portfolio section">
 
-      <div class="container">
-
-
+      <div class="container">	
+	
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>3. Учебники, практикумы </h1>
-
+        <h1>Групповые и индивидуальные занятия</h1>
+		<p>+ Интенсив для начинающий (А1-А-2)</p>
+		<p>+  Занятия по уровням В1, В2, С1</p>
+		<p>- немецкий </p>
 		<p>- английский</p>
-		<p>- немецкий</p>
 		<p>- французский</p>
-		<p>- испанский</p>
 		<p>- польский</p>
 		<p>- голландский</p>
-		<p>- РКИ (на англ)</p>
-		<p>- удмуртский</p>
+		<p>- РКИ (русский как иностранный )(на англ, нем, фр, исп)</p>
       </div>
-    </div><!-- End Page Title -->
-      </div>
+	  
+	 <div class="content px-4">
+		<div class="row gx-6">
+			Курсы построены на авторской методике ускоренного обучения: освоение базовых грамматических структур, интенсивный набор наиболее частотной лексики,  отработка и закрепление коммуникативных навыков.
+		</div>
+		
+		<br>
+		
+		<div class="row gx-6">
+			Продолжительность курсов 6 месяцев.<br>
+			Достигнутый уровень владения А2
+		</div>
+		
+		<br>
+		
+		<div class="row gx-6">
+			ПРЕИМУЩЕСТВА КУРСОВ:
+			<ul>
+				<li>логико-интуитивное погружение в язык вместо утомительного заучивания</li>
+				<li>освоение грамматики и лексики через живое общение в реальных ситуациях</li>
+				<li>снятие языкового барьера, приобретение уверенности в речи даже на самом начальном этапе изучения языка</li>
+				<li>занятия в малых группах 4-6 человек</li>
+				<li>бесплатный учебники, авторский контент по грамматике, развитию навыков коммуникации и аудирования</li>
+			</ul>
+		</div>
+		
+		<br>
+		
+		<div class="row gx-6 pricegreen">
+			<h6> Стоимость  занятий: </h6>
+			<p>
+			&ndash; Групповые занятия: 6000 рублей в месяц/ 500 рублей 60 минут <br>
+			Занятия проводятся два раза в неделю по 90 минут 
+			</p>
+			<p>
+			&ndash; Индивидуальные занятия – 2000 рублей / 60 минут <br>
+			(Время по согласованию) 
+			</p>
+		</div>
 
-    </section><!-- /Portfolio Section -->
+		
+	</div>
+	
+    </div><!-- End Page Title -->	
 
+	</div>
+	</section>
+	
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
-
     </section><!-- /Testimonials Section -->
 
   </main>
@@ -163,12 +202,12 @@
 		<script>
 		    let currentDate = new Date();
 			let currentYear = currentDate.getFullYear();
-			console.log(currentYear);
+			console.log('developing by Maksim');
 		</script>
 		
 		</p>
         <div class="credits">
-          developing by <a href="#">zyk0</a>
+          developing by <a href="https://zyk0.github.io/contact.html" target="_blank">zyk0</a>
         </div>
       </div>
     </div>
