--- a/classbook.html
+++ b/classbook.html
@@ -89,7 +89,15 @@
 		  <div class="row gx-6">
 			Практикумы содержат 30 авторских уроков, включающих упрощённое объяснение грамматики, тематическую лексику, тексты и упражнения, направленные на отработку коммуникативных навыков. В практикумах объединены принципы и методы, используемые большинством полиглотов: освоение базовых грамматических структур, интенсивный набор наиболее частотной лексики. Достигнутый уровень А2
 		  </div>
-	  </div>			
+	  </div>	
+	  <br>
+	<div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-lg-2 offset-xl-1 mb-4">
+		<div class="img-wrap text-center text-md-left">
+			<div class="img">
+				<img src="assets/img/books.png" alt="circle image" class="img-fluid">
+			</div>
+		</div>
+	</div>
 	  
     </div><!-- End Page Title -->
     </div>
